// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Game component is rendering default 1`] = `
<div>
  <header>
    TicTacToe foo moves
    <button
      onClick={[Function]}
      type="button"
    >
       New Game
    </button>
  </header>
  <div
    className="Game"
  >
    <Board />
  </div>
</div>
`;

exports[`Game component is rendering draw 1`] = `
<div>
  <header>
    TicTacToe foo moves
    <button
      onClick={[Function]}
      type="button"
    >
       New Game
    </button>
  </header>
  <div
    className="Game"
  >
    <Board />
  </div>
  <Modal
    names={
      Array [
        "foo",
        "bar",
      ]
    }
    status="draw"
  />
</div>
`;

exports[`Game component is rendering error 1`] = `
<div>
  <header>
    TicTacToe foo moves
    <button
      onClick={[Function]}
      type="button"
    >
       New Game
    </button>
  </header>
  <div
    className="Game"
  >
    <Board />
  </div>
  <Modal
    names={
      Array [
        "foo",
        "bar",
      ]
    }
    status="wrong_move"
  />
</div>
`;

exports[`Game component is rendering winner-0 1`] = `
<div>
  <header>
    TicTacToe bar moves
    <button
      onClick={[Function]}
      type="button"
    >
       New Game
    </button>
  </header>
  <div
    className="Game"
  >
    <Board />
  </div>
  <Modal
    names={
      Array [
        "foo",
        "bar",
      ]
    }
    status="winner-0"
  />
</div>
`;

exports[`Game component is rendering winner-1 1`] = `
<div>
  <header>
    TicTacToe foo moves
    <button
      onClick={[Function]}
      type="button"
    >
       New Game
    </button>
  </header>
  <div
    className="Game"
  >
    <Board />
  </div>
  <Modal
    names={
      Array [
        "foo",
        "bar",
      ]
    }
    status="winner-1"
  />
</div>
`;
